EXTRA_DIST= \
	100cont_auto.htt \
	100cont.htt \
	assert.hte \
	assert.htt \
	assert_string_equal.hte \
	assert_string_equal.htt \
	assert_string_equal.txt \
	assert.txt \
	autoclose2.hte \
	autoclose2.htt \
	autoclose2.txt \
	autoclose.hte \
	autoclose.htt \
	autoclose.txt \
	autocookie.htt \
	bad_headers.htt \
	base64.htt \
	big_data.htt \
	binary_http_body.htt \
	binary_protocol.hte \
	binary_protocol.htt \
	binary_protocol.txt \
	block_declare_after.htt \
	block.htb \
	block.hte \
	block.htt \
	block_in_out_params.htt \
	block_js_args.hte \
	block_js_args.htt \
	block_js_args.txt \
	block_js.hte \
	block_js.htt \
	block_js_on_the_fly.htt \
	block_js.txt \
	block_local_vars.htt \
	block_lua_2_funcs.htt \
	block_lua_buf.htt \
	block_lua_cert.htt \
	block_lua_crypto.htt \
	block_lua_dh.htt \
	block_lua_file_md5.htt \
	block_lua.hte \
	block_lua.htt \
	block_lua_httest.htt \
	block_lua_transport.htt \
	block_lua.txt \
	block_not_found.hte \
	block_not_found.txt \
	block_params.htt \
	block.txt \
	block_var_buf.htt \
	block_var_missmatch.hte \
	block_var_missmatch.txt \
	block_var_params.htt \
	bps.htt \
	breakfor.htt \
	break.htt \
	ca2.cert.pem \
	ca.cert.pem \
	charset.htt \
	chunk.htt \
	chunk.visual \
	client2.cert.pem \
	client2.key.pem \
	client.cert.pem \
	client.key.pem \
	concurrent.htt \
	config.htb \
	connection.htt \
	crawl.htt \
	custom_commands.htt \
	daemon2.htt \
	daemon.htt \
	debug.htt \
	debug.visual \
	deflate.htt \
	dso_foo_func.htt \
	dso_foo.htt \
	dummy2.htb \
	dummy3.htb \
	dummy4.htb \
	dummy5.htb \
	dummy6.htb \
	dummy7.htb \
	dummy8.htb \
	dummy9.htb \
	dummy.htb \
	duration.htt \
	embedded_file.htt \
	embedded_sh.htt \
	embedded_sh_pipe.htt \
	embedded_sh_threaded.htt \
	empty.htt \
	env.htt \
	error_body.hte \
	error_body.htt \
	error_body.txt \
	error_match.htt \
	errors.hte \
	errors.htt \
	errors_neg.hte \
	errors_neg.txt \
	errors.txt \
	errors_win_crlf.hte \
	errors_win_crlf.txt \
	escaping.htt \
	exec_expect.hte \
	exec_expect.htt \
	exec_expect.txt \
	exec.htt \
	exec_httest.htt \
	exec_last_line_not_newline.htt \
	exec_no_output.htt \
	exec_quotes.htt \
	exec_threaded.htt \
	exit.hte \
	exit.htt \
	exit.txt \
	expect_header_not_body.hte \
	expect_header_not_body.htt \
	expect_header_not_body.txt \
	expect_with_trash_behind.hte \
	expect_with_trash_behind.txt \
	finally_on_failed2.htt \
	finally_on_failed3.htt \
	finally_on_failed.hte \
	finally_on_failed.htt \
	finally_on_failed.txt \
	finally_on_many_bodies.htt \
	folded.htt \
	foreach.htt \
	functionality.ntlm \
	function.htt \
	generate_makefile_am.sh \
	global_exec.hte \
	global_exec.txt \
	go.htt \
	go.visual \
	grep.htt \
	headers_allow.htt \
	headers_filter.htt \
	html.hte \
	html.htt \
	html.txt \
	http_0_9.htt \
	http2_h2_not_initialized_ping.hte \
	http2_h2_not_initialized_ping.txt \
	http2_h2_not_initialized_settings.hte \
	http2_h2_not_initialized_settings.txt \
	http2_h2_not_initialized_wait.hte \
	http2_h2_not_initialized_wait.txt \
	http2_ping_close_ping_again.htt \
	http2_ping.htt \
	http2_plain_client.hte \
	http2_plain_client.txt \
	http2_settings_none.htt \
	huge_page_chunked.htt \
	huge_page.htt \
	icap_100cont.htt \
	icap_auto.htt \
	icap_huge.htt \
	icap_main.htt \
	ifcond.htt \
	ifelse.htt \
	ifequal.htt \
	ifeval.htt \
	if_local_vars.htt \
	ifnumber.htt \
	ifvareq.htt \
	ignore_body.htt \
	ignore_body_space.htt \
	ignore_errors.htt \
	ignore_monitors.htt \
	include.hte \
	include.htt \
	include.txt \
	incomplete.htt \
	inline.htt \
	inline_not_exist.htt \
	inline_not_exist.visual \
	join.htt \
	late_var_replace.htt \
	leftovertmpf.htt \
	listen_to_ip_port.htt \
	lock.htt \
	loop_auto.htt \
	loop_cur.htt \
	loop_duration.htt \
	loop.htt \
	macro.htt \
	macro_too_many_redirects.htt \
	main_functionality.htt \
	match_dot.hte \
	match_dot.txt \
	match_exec_no_newline.htt \
	match.hte \
	match.htt \
	match_order.hte \
	match_order.htt \
	match_order_threaded.htt \
	match_order.txt \
	match.txt \
	match_var.htt \
	math.htt \
	milestone.hte \
	milestone.txt \
	mixed_socket.htt \
	module.htb \
	module.htt \
	multi_line_match.htt \
	multi_line_variable.hte \
	multi_line_variable.htt \
	multi_line_variable.txt \
	multi_match.htt \
	multi_socket.htt \
	multi_var_match.htt \
	neg_content_length.htt \
	newstyle.htt \
	nocrlf.htt \
	nosocket.hte \
	nosocket.txt \
	no_ssl_port_set.hte \
	no_ssl_port_set.txt \
	no_ssl_set_cert.hte \
	no_ssl_set_cert.txt \
	null_content.htt \
	only_printable.htt \
	overflow.htt \
	perf_terminate_check.htt \
	pipe_exec_out.htt \
	pipelining_request.htt \
	pipe_recv_to_file.htt \
	pipe_simple.htt \
	pipe_to_file.htt \
	plain2ssl.htt \
	pop3_simple.htt \
	pop3_tls.htt \
	print_hex_match.htt \
	proxy_main_functionality.htt \
	random.htt \
	recursiv.htb \
	recv_chunked.htt \
	recv_eof.htt \
	recv_length.htt \
	recv_polling.htt \
	regexcode.htt \
	request_ended_server.htt \
	require_module.htt \
	require_version.htt \
	rps.htt \
	run_all.sh \
	run_color.sh \
	run_errors.sh \
	run_errors_thread_no.sh \
	run_help.sh \
	run_lib.sh \
	run_ntlm.sh \
	run.sh \
	run_valgrind.sh \
	run_visual.sh \
	run_wild.sh \
	sendfile_chunked.htt \
	sendfile.htt \
	sendfile_multiple.htt \
	server.cert.pem \
	server_connection_close.htt \
	server_def_before_client.htt \
	server_distribute.htt \
	server_ip_port.htt \
	server.key.pem \
	server_up_down.htt \
	shared.htt \
	shell.htb \
	simple.htt \
	simple_perf.htt \
	simple_rampup.htt \
	simple_stat.htt \
	simple.visual \
	skeleton.htt \
	smtp_simple.htt \
	socketbody.htt \
	socks_domain_name.htt \
	socks.htt \
	sockstate.htt \
	ssl_big_content.htt \
	ssl_debug.htt \
	ssl_get_cert.hte \
	ssl_get_cert.htt \
	ssl_get_cert.txt \
	ssl_get_wrong_cert.hte \
	ssl_get_wrong_cert.htt \
	ssl_get_wrong_cert.txt \
	ssl_multi_socket.htt \
	ssl_mutual2.hte \
	ssl_mutual2.txt \
	ssl_mutual.hte \
	ssl_mutual.htt \
	ssl_mutual.txt \
	ssl_mutual_verify.htt \
	ssl_no_default_pem.htt \
	ssl_plain_first.htt \
	ssl_server_cert_verify2.htt \
	ssl_server_cert_verify3.htt \
	ssl_server_cert_verify.hte \
	ssl_server_cert_verify.htt \
	ssl_server_cert_verify.txt \
	ssl_session_reuse.htt \
	ssl_simple2.htt \
	ssl_simple.htt \
	ssl_socks.htt \
	ssl_sockstate2.htt \
	ssl_sockstate.htt \
	ssl_stream_myself.htt \
	ssl_threaded_server.htt \
	ssl_timeout.htt \
	stat.htt \
	store.htt \
	stream_myself.htt \
	sync.htt \
	syntax_global_in_body.hte \
	syntax_global_in_body.txt \
	syntax_invalid_local.hte \
	syntax_invalid_local.txt \
	tab_and_space_before_local.htt \
	tagged_sockets.htt \
	tcp_main.htt \
	test_check_coredumps.sh \
	test_run_all.sh \
	test_run_errors.sh \
	test_run_errors_thread_no.sh \
	test_run_help.sh \
	test_run_ntlm.sh \
	test_run_shell.sh \
	test_run_visual.sh \
	threaded.htt \
	threaded_server.htt \
	time.htt \
	timeout.htt \
	trace_on_failure_2.htb \
	trace_on_failure_3.htb \
	trace_on_failure.htb \
	trace_on_failure.hte \
	trace_on_failure.txt \
	tunnel.htt \
	unicode.ntlm \
	unset.htt \
	unused_expect_body.hte \
	unused_expect_body.txt \
	unused_expect_dot.hte \
	unused_expect_dot.txt \
	unused_expect_exec.hte \
	unused_expect_exec.txt \
	unused_expect_headers.hte \
	unused_expect_headers.txt \
	unused_match_body.hte \
	unused_match_body.txt \
	unused_match_dot.hte \
	unused_match_dot.txt \
	unused_match_exec.hte \
	unused_match_exec.txt \
	unused_match_headers.hte \
	unused_match_headers.txt \
	urldecode.htt \
	urlencode.htt \
	use_local_commands_in_global_env.hte \
	use_local_commands_in_global_env.htt \
	use_local_commands_in_global_env.txt \
	var_double_ref.htt \
	var_expect.hte \
	var_expect.htt \
	var_expect.txt \
	variables.htt \
	var_match.hte \
	var_match.htt \
	var_match.txt \
	var_resolve.htt \
	wait0.htt \
	wait.htt \
	websocket_binary.htt \
	websocket_can_not_recv_16_bit_length.hte \
	websocket_can_not_recv_16_bit_length.txt \
	websocket_can_not_recv_64_bit_length.hte \
	websocket_can_not_recv_64_bit_length.txt \
	websocket_can_not_recv_first_frame_byte.hte \
	websocket_can_not_recv_first_frame_byte.txt \
	websocket_can_not_recv_first_len_byte.hte \
	websocket_can_not_recv_first_len_byte.txt \
	websocket_can_not_recv_mask.hte \
	websocket_can_not_recv_mask.txt \
	websocket_can_not_recv_payload.hte \
	websocket_can_not_recv_payload.txt \
	websocket.htt \
	websocket_huge.htt \
	websocket_mask.htt \
	websocket_null_body.htt \
	_wrapper_test.sh \
	xml.htt 

test_store_SOURCES=test_store.c $(top_srcdir)/src/store.c
test_file_SOURCES=test_file.c $(top_srcdir)/src/file.c $(top_srcdir)/src/util.c $(top_srcdir)/src/store.c
AM_CFLAGS=-I$(top_srcdir)/src
check_PROGRAMS=test_store test_file
TESTS = test_store test_file test_run_help.sh test_run_all.sh test_run_errors.sh test_run_visual.sh test_run_ntlm.sh test_check_coredumps.sh
